Fix vertical spacing in mobile's nav

--- a/source/_components/_header/_header.sass
+++ b/source/_components/_header/_header.sass
@@ -48,6 +48,9 @@ header.hd__Container
 
     font-style: italic
 
+    li
+      line-height: 1rem
+
     .active
       color: $mainColor
       font-style: normal
